@startuml

    [*] --> EMPTY
    EMPTY -> PLACED : Update Order
    PLACED -> SELECTED : Select seat
    SELECTED -> PLACED : Unselect seat
    SELECTED -> EMPTY : Add order to bill
    EMPTY --> PLACED : Cancel bills

state EMPTY : entry / Display seat color as White
state PLACED : entry / Display seat color as Green
state SELECTED : entry / Display seat color as Blue

@enduml